WindGroup Dev/src/objects/Daily_Checklist_Object_Mapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>For Daily Checklist Integration Mapping</description>
    <fields>
        <fullName>AWS_Field_Label__c</fullName>
        <label>AWS Field Label</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AWS_Object_Label__c</fullName>
        <label>AWS Object Label</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Image__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Image</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Salesforce_Field__c</fullName>
        <label>Salesforce Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_Object_Name__c</fullName>
        <label>Salesforce Object Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Daily Checklist Object Mapping</label>
</CustomObject>